# fyteclub

./: .gitignore  ANTI_DETECTION_GUIDELINES.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_GUIDE.md  BIDIRECTIONAL_TRANSFER_FIX.md  BUILD_GUIDE.md  BUILD_WEBRTC_MSVC.md  CLANG_BUILD_SETUP.md  CLEANUP_SUMMARY_FINAL.md  CLIENT_CACHE_IMPLEMENTATION_PLAN.md  CODE_WALKTHROUGH.md  COMPANION_TESTING.md  CONSERVATIVE_CLEANUP_SUMMARY.md  CURRENT_STATUS.md  DEVELOPMENT_ROADMAP.md  DUPLICATE_MESSAGE_FIX.md  FEATURE_COMPARISON.md  FINAL_TEST_RESULTS_v3.0.0.md  GPOSE_TESTING.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INSTALL_REQUIREMENTS.md  INSTALL_WEBRTC.md  LIBDATACHANNEL_SETUP.md  LIVE_SERVER_TEST_RESULTS.md  MARE_IMPLEMENTATION_PLAN.md  P2P_MESSAGE_HANDLING_ISSUES.md  P2P_ROADMAP.md  PC-SETUP-SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v3.0.3.md  RELEASE_NOTES_v3.1.1.md  RELEASE_NOTES_v4.0.0.md  RELEASE_NOTES_v4.1.0.md  RELEASE_NOTES_v4.1.2.md  RELEASE_SUMMARY_v1.1.1.md  (+87 more)
client/: README.md  build.bat  package-lock.json  package.json  test-daemon.js  test-plugin-comm.js
docs/: ARCHITECTURE.md  ARCHITECTURE_MIGRATION.md  CLEANUP_SUMMARY.md  COMPLETE_DUPLICATE_MESSAGE_FIX.md  COORDINATED_TRANSFER_MIGRATION.md  CRITICAL_FIXES_SUMMARY.md  ChannelDebugAnalysis.md  DEVELOPMENT_SETUP.md  FINAL_CLEANUP_SUMMARY.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  ICE_CANDIDATE_ISSUE.md  LOG_SPAM_FIXES.md  MARE_UPGRADE_GUIDE.md  MULTI_CHANNEL_TESTING_GUIDE.md  MULTI_CHANNEL_TEST_SUMMARY.md  ORGANIZATION_ANALYSIS.md  README.md  RECONNECTION_IMPLEMENTATION.md  RECONNECTION_QUICK_REFERENCE.md  RECONNECTION_STATUS.md  REPOSITORY_STRUCTURE.md  REQUIREMENTS.md  ROADMAP.md  SIMPLE_ARCHITECTURE.md  TESTING_OVERVIEW.md  cleanup-recipe-system.md  implementation-gaps-fixed.md  installation.md  mod-sync-analysis.md  native-webrtc.md  syncshell-onboarding-implementation.md  webrtc-bootstrap-fix.md  webrtc-fix.patch  webrtc-fixes-needed.md  webrtc-logging-enhancements.md  webrtc-p2p-progress.md
infrastructure/: README.md  deploy.bat  main.tf  outputs.tf  terraform.tfvars.example  test-api.js  variables.tf
native/: CMakeLists.txt  build_webrtc_wrapper.bat  minimal_webrtc.cpp  simple_webrtc.cpp  webrtc_wrapper.cpp
plugin-release/: FyteClub.json
plugin-tests/: AutomatedAnswerTests.cs  BasicMultiChannelTests.cs  BasicP2PTests.cs  CacheTabUiTests.cs  CompleteWebRTCHandshakeTests.cs  ConfigurationTests.cs  Ed25519IntegrationTests.cs  EncryptionTests.cs  FyteClubPlugin.Tests.csproj  ICESTUNConfigurationTests.cs  IntegrationTests.cs  IntroducerServiceTests.cs  InviteCodeGeneratorTests.cs  InviteCodeJoinTests.cs  InviteCodeProcessingTests.cs  JoinButtonLogicTests.cs  JoinButtonUITests.cs  MockWebRTCConnection.cs  MockWebRTCTests.cs  ModTransferProtocolTests.cs  MultiChannelInfrastructureTest.cs  MultiChannelTransferTests.cs  NostrSignalingTests.cs  NostrUriParsingTests.cs  NostrUriTests.cs  P2PConnectionTests.cs  PhonebookIntegrationTests.cs  ProductionFeaturesTests.cs  ProofOfPossessionTests.cs  RealP2PFlowIntegrationTests.cs  (+18 more)
(+343 files in other folders)
